Day5/hostpath-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod
spec:
  containers:
  - name: my-container
    image: busybox
    args: [ "tail", "-f", "/dev/null" ]
    volumeMounts:
    - name: my-hostpath-volume
      mountPath: /etc/data
  volumes:
  - name: my-hostpath-volume
    hostPath:
      path: /tmp
