Day5/pvpvc-pod-redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: redis
    image: redis
    volumeMounts:
    - name: terrypath
      mountPath: /data
  volumes:
  - name : terrypath
    persistentVolumeClaim:
      claimName: dev-pvc
