Day5/sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-web
  template:
    metadata:
      labels:
        app: springboot-web
    spec:
      containers:
      - name: springboot-web
        image: 1223yys/springboot-web:0.2.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
            path: /api
          initialDelaySeconds: 60
        readinessProbe:
          httpGet:
            port: 8080
            path: /api
          initialDelaySeconds: 60
