Day5/springboot-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-web-service
spec:
  selector:
    app: springboot-web
  ports:
  - name: http
    port: 80
    targetPort: 8080
