Day5/nginx-ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "gce-k8s-master.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-web-service
            port:
              number: 80
